index.htmlの表示方法を変更

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>〇〇ネーター</title>
-    <link rel="stylesheet" type="text/css" href="index.css">
-    <script type="text/javascript" src="index.js"></script>
+    <link rel="stylesheet" type="text/css" href="/static/css/index.css">
+    <script type="text/javascript" src="/static/js/index.js"></script>
   </head>
   <body>
     <div class="app">
@@ -13,7 +13,7 @@
           <h1>〇〇ネーター</h1>
         </div>
         <div class="question">
-          <p id="question">いろはすですか？</p>
+          <p id="question"></p>
         </div>
         <div class="choice">
           <button type="button" name="button" class="choice-btn" onclick="onClick(this, true)">はい</button>
