レイアウトの調整

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="ja" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>〇〇ネーター</title>
+    <title>お腹空いたねぇ？</title>
     <link rel="stylesheet" type="text/css" href="/static/css/index.css">
     <script type="text/javascript" src="/static/js/index.js"></script>
   </head>
@@ -10,7 +10,7 @@
     <div class="app">
       <div class="main">
         <div class="title">
-          <h1>〇〇ネーター</h1>
+          <h1>今日のご飯は？？</h1>
         </div>
         <div class="question">
           <p id="question"></p>
